--- a/02092021/package.json
+++ b/02092021/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test":         "echo \"Error: no test specified\" && exit 1",
-    "build-page-one": "postcss css/page.one.css -o build/page.one.css"
+    "buildone":    "npx postcss css/page.one.css -o build/page.one.css"
   },
   "keywords": [],
   "author": "",
