--- a/02092021/package.json
+++ b/02092021/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test":        "echo \"Error: no test specified\" && exit 1",
-    "buildone":    "npx postcss css/page.one.scss -o build/page.one.css --watch",
-    "buildtwo":    "npx postcss css/page.two.scss -o build/page.two.css --watch"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildone": "npx postcss css/page.one.scss -o build/page.one.css --watch",
+    "buildtwo": "npx postcss css/page.two.scss -o build/page.two.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "autoprefixer": "^10.3.3",
     "postcss-cli": "^8.3.1",
+    "postcss-scss": "^4.0.0",
     "tailwindcss": "^2.2.9"
   }
 }
